--- a/views/layouts/cadastro.ejs
+++ b/views/layouts/cadastro.ejs
@@ -1,13 +1,12 @@
 
 
 <body>
-    <div class="bimage">
+    <div class="container">
         <div class="box">
             <div class="texto">
                 <p class="Login">Cadastro</p>
             </div>
-
-            <form action="/cadastro" method="post" name="cadastro" id="cadastro">
+            <form action="/cadastro" method="post" name="cadastro" class="info" id="cadastro">
                 <input type="text" name="username" class="btn-username" placeholder="Nome" id="nome" required>
                 <input type="email" name="email" class="btn-username" placeholder="E-mail" id="email" required>
                 <input type="password" id="senha" name="password" class="btn-username" placeholder="Senha" required>
