--- a/views/layouts/carrinho.ejs
+++ b/views/layouts/carrinho.ejs
@@ -191,22 +191,23 @@
         </div>
 
         <!-- valor da compra de todos os produtos -->
-
-        <div class="compra">
-            <div class="compra_div">
-                <div class="subtotal">Subtotal</div>
-                <div id="val_sub">R$: 2590,55</div>
-            </div>
-            <div class="compra_div">
-                <div class="subtotal">Frete</div>
-                <div id="val_sub">R$: 8999,99</div>
-            </div>
-            <div class="compra_div">
-                <div class="subtotal">Valor total</div>
-                <div id="val_sub">R$: 250,55</div>
-            </div>
-            <div class="compra_div compra_bot">
-                <button class="finalizar_compra" type="url">Finalizar compra</button>
+        <div class="container flex">
+            <div class="compra">
+                <div class="compra_div">
+                    <div class="subtotal">Subtotal</div>
+                    <div id="val_sub">R$: 2590,55</div>
+                </div>
+                <div class="compra_div">
+                    <div class="subtotal">Frete</div>
+                    <div id="val_sub">R$: 8999,99</div>
+                </div>
+                <div class="compra_div">
+                    <div class="subtotal">Valor total</div>
+                    <div id="val_sub">R$: 250,55</div>
+                </div>
+                <div class="compra_div compra_bot">
+                    <button class="finalizar_compra" type="url">Finalizar compra</button>
+                </div>
             </div>
         </div>
     </div>
