--- a/public/stylesheets/Tela-principal.css
+++ b/public/stylesheets/Tela-principal.css
@@ -1,3 +1,12 @@
+body {
+    height: 100%;
+    width: 100%;
+    background-color: rgb(37, 37, 37);
+    background-image: url(../images/background2.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
 
 .grid-principal {
     display: grid;
@@ -29,7 +38,7 @@
     flex-direction: row;
     border: #1b1b1b solid 1px;
     border-radius: 5px;
-    background-color: rgba(42, 41, 43, 0.4);
+    background-color: rgba(42, 41, 43, 0.2);
     backdrop-filter: blur(6px);
     padding: 20px;
     padding-top: 30px;
@@ -138,6 +147,7 @@
     color: black;
 }
 
+.categorias>li {}
 
 /* produto */
 .imagem-produto {
