--- a/public/stylesheets/cadastro.css
+++ b/public/stylesheets/cadastro.css
@@ -1,24 +1,54 @@
+body {
+    background-color: rgb(66, 66, 66);
+    background-image: url(../images/background2.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+.info {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.container {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 .texto {
+    display: flex;
+    justify-content: center;
     color: white;
-    width: 35px;
-    height: 10%;
-    margin-top: 60px;
+    text-align: center;
+    width: 100%;
+    height: 50px;
+    margin-top: 20px;
 }
 
 .box {
+    display: flex;
     flex-direction: column;
-    margin: 38px 0px 0px 475px;
-    width: 400px;
-    height: 510px;
-    text-align: center;
-    justify-content: center;
+    border: #1b1b1b solid 1px;
+    border-radius: 5px;
+    background-color: rgba(42, 41, 43, 0.2);
+    backdrop-filter: blur(3px);
+    padding: 30px;
+    width: 300px;
+    height: 460px;
+    justify-content: space-around;
     overflow-y: auto;
 }
 
 .Login {
     color: #f85d03;
     font: bold 30px sans-serif;
-    margin-left: 135px;
+
 }
 
 .btn-username {
@@ -27,31 +57,45 @@
     border-bottom: 1px solid rgb(59, 59, 59);
     height: 30px;
     width: 260px;
-    margin-top: 15px;
+    margin-top: 20px;
     text-align: left;
 }
 
+#nome:focus,
+#email:focus,
+#senha:focus,
+#confirmar:focus,
+#address:focus {
+    color: white;
+    background-color: rgba(20, 20, 20, 0.021);
+    border-bottom: 1px solid rgb(255, 80, 0);
+    height: 30px;
+    width: 260px;
+    margin: 10px;
+}
+
 .mini-box {
-    display: inline-flex;
-    flex-direction: row;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .mini-box input {
-    border-radius: 10px;
-    background-color: #ff7300;
+    background-color: rgb(255, 80, 0);
     color: rgb(34, 34, 34);
-    width: 100px;
-    height: 25px;
+    width: 120px;
+    border-radius: 20px;
+    height: 30px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font: bold 17px sans-serif;
-    margin: 15px 0px 0px 10px;
-    border: none;
+    margin: 10px;
+    cursor: pointer;
 }
 
 .mini-box input:hover {
-    background-color: #d15e00;
+    background-color: rgb(182, 58, 0);
 }
 
 .forgot-password a:link,
