--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,24 +1,56 @@
+body {
+    background-color: rgb(66, 66, 66);
+    background-image: url(../images/background2.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+.info {
+    height: 220px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.container {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 .texto {
+    display: flex;
+    justify-content: center;
     color: white;
-    width: 35px;
-    height: 10%;
-    margin-top: 120px;
+    text-align: center;
+    width: 100%;
+    height: 50px;
+    margin-top: 20px;
 }
 
 .box {
+    display: flex;
     flex-direction: column;
-    margin: 38px 0px 0px 475px;
-    width: 400px;
-    height: 500px;
-    text-align: center;
-    justify-content: center;
+    border: #1b1b1b solid 1px;
+    border-radius: 5px;
+    background-color: rgba(42, 41, 43, 0.2);
+    backdrop-filter: blur(3px);
+    padding: 30px;
+    width: 300px;
+    height: 400px;
+    justify-content: space-around;
     overflow-y: auto;
 }
 
 .Login {
-    color: #ff7300;
+    color: rgb(255, 80, 0);
     font: bold 30px sans-serif;
-    margin-left: 155px;
+    width: 200px;
+
+
 }
 
 .btn-username {
@@ -36,41 +68,68 @@
 .forgot-password a:visited,
 .forgot-password {
     margin-top: 20px;
-    color: #ff7300;
+    color: rgb(255, 80, 0);
     font: bold 17px sans-serif;
+    text-align: center;
+
 }
 
 .mini-box {
-    display: inline-flex;
-    flex-direction: row;
+    display: flex;
 }
 
-.mini-box a,
-.mini-box input {
-    border-radius: 10px;
-}
-
-.mini-box a:link,
-.mini-box a:visited,
-.mini-box input {
-    background-color: #ff7300;
-    color: rgb(34, 34, 34);
-    width: 100px;
-    height: 20px;
+.log-botao:link,
+.log-botao:visited,
+.log-botao {
+    background-color: rgb(255, 80, 0);
+    color: rgb(8, 8, 8);
+    width: 120px;
+    border-radius: 20px;
+    height: 30px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font: bold 17px sans-serif;
-    margin: 20px 0px 0px 10px;
+    margin: 10px;
     cursor: pointer;
 }
 
-.mini-box a:hover,
-.mini-box a:active,
-.mini-box input:hover,
-.mini-box input:active {
-    background-color: #d15e00;
+.log-botao:active,
+.log-botao:hover {
+    background-color: rgb(170, 54, 0);
 }
+
+.mini-box a {
+    border-radius: 20px;
+    justify-content: center;
+    transition-duration: 0.2s;
+}
+
+.mini-box a p {
+    margin-top: 5px;
+    display: flex;
+    justify-content: center;
+    text-align: bottom;
+    height: 25px;
+    color: black;
+}
+
+.mini-box a:hover {
+    background-color: rgb(170, 54, 0);
+    transition-duration: 0.2s;
+
+}
+
+#name:focus,
+#senha:focus {
+    color: white;
+    background-color: rgba(20, 20, 20, 0.021);
+    border-bottom: 1px solid rgb(255, 80, 0);
+    height: 30px;
+    width: 260px;
+    margin: 10px;
+}
+
 
 .wrongpass {
     color: red;
