--- a/public/stylesheets/scrollbar.css
+++ b/public/stylesheets/scrollbar.css
@@ -1,22 +1,20 @@
-
-
 *::-webkit-scrollbar {
-    width:0.8vmax;
+    width: 0.8vmax;
     height: 0.8vmax;
     background: rgba(68, 68, 68, 0);
+    border-radius: 20px;
     z-index: 2;
     /* width of the entire scrollbar */
 }
 
 *::-webkit-scrollbar-track {
     background: rgb(29, 29, 29);
-    border-radius: 20px;
     z-index: 2;
 }
 
 *::-webkit-scrollbar-thumb {
     background-color: rgb(56, 56, 56);
-    border: 0.2vmax solid rgb(29, 29, 29);
+    border: 0.2vmax solid rgba(29, 29, 29);
     border-radius: 20px;
     z-index: 2;
 }
