--- a/public/stylesheets/wishlist.css
+++ b/public/stylesheets/wishlist.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(37, 37, 37);
+    background-color: rgb(20, 20, 20);
     background-image: url(./../images/background2.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -8,35 +8,38 @@ body {
 
 .container {
     display: grid;
-    background-color: rgb(66, 66, 66);
-    justify-content: space-evenly;
-    justify-content: center;
 }
 
 .principal {
+    display: flex;
+    margin-top: 100px;
     position: relative;
     bottom: 60px;
-    margin-top: 100px;
     background-color: rgba(255, 255, 255, 0);
     padding: 20px;
     padding-top: 30px;
     height: fit-content;
-    justify-content: space-between;
+    width: 97%;
     justify-content: center;
+
+}
+.flex{
+    margin-left: 10px;
 }
 
 .grid {
     background-color: rgba(255, 255, 255, 0);
-    height: 510px;
-    width: 1310px;
+    height: 500px;
+    width: 908px;
     row-gap: 24px;
     border-radius: 4px;
     justify-content: space-between;
-    grid-template-columns: 1300px;
+    grid-template-columns: 900px;
     grid-auto-rows: 150px;
     padding-right: 15px;
     overflow: scroll;
     overflow-x: hidden;
+
 }
 
 .pesquisa {
@@ -71,11 +74,11 @@ body {
 }
 
 .ul {
-    color: white;
+    color: rgb(158, 158, 158);
     padding: 20px;
 }
 
-.wishlist {
+.carrinho {
     color: rgb(19, 19, 19);
     background-color: #f85d03;
 }
@@ -93,9 +96,10 @@ body {
 }
 
 .item {
+
     color: rgb(179, 179, 179);
-    backdrop-filter: blur(6px);
     display: grid;
+    backdrop-filter: blur(6px);
     box-shadow: 0px 0px 3px rgb(42, 41, 43);
     background-color: rgba(42, 41, 43, 0.4);
     border: #1b1b1b solid 1px;
@@ -103,7 +107,7 @@ body {
     justify-content: center;
     font-family: 'Verdana', Courier, monospace;
     text-align: center;
-    grid-template-columns: 150px 952px 195px;
+    grid-template-columns: 150px 555px 195px;
     grid-template-rows: 150px;
     transition: 0.5s ease;
 
@@ -113,7 +117,7 @@ body {
     border: none;
     border-radius: 3px;
     color: rgb(158, 158, 158);
-    background: #363636;
+    background: #3d3d3d;
     padding: 5px 25px;
     text-align: center;
     font-size: 12px;
@@ -128,29 +132,9 @@ body {
     cursor: pointer;
 }
 
-.adicionar {
-    border: none;
-    border-radius: 3px;
-    color: rgb(158, 158, 158);
-    background: #3d3d3d;
-    margin-top: 12px;
-    padding: 5px 21px;
-    text-align: center;
-    font-size: 12px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.adicionar:hover {
-    color: rgb(158, 158, 158);
-    background: #464646;
-    text-align: center;
-    cursor: pointer;
-}
-
 .descricao {
     height: 125px;
-    width: 800px;
+    width: 500px;
     word-wrap: break-word;
     overflow: hidden;
     text-align: left;
@@ -158,7 +142,6 @@ body {
     margin: auto;
     color: rgb(179, 179, 179);
     grid-column: 2 / 3;
-    white-space: normal;
 }
 
 .descricao2 {
@@ -177,6 +160,14 @@ body {
     width: auto;
     align-items: flex-end;
     font-size: 28px;
+}
+
+.Qtd_produtos {
+    display: flex;
+    justify-content: space-between;
+    height: 30px;
+    width: 175px;
+    font-size: medium;
 }
 
 #mais {
@@ -201,10 +192,10 @@ body {
 
 #format {
     width: 30px;
-    background-color: #888888;
+    background: #3d3d3d;
     border: none;
     text-align: center;
-    color: rgb(48, 48, 48);
+    color: rgb(158, 158, 158);
 }
 
 #Qtd {
@@ -215,14 +206,20 @@ body {
     padding: 2px;
     border: none 1px;
     border-radius: 3px;
-    background-color: #888888;
+    background: #3d3d3d;
+    ;
 }
 
 .compra {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: 380px;
     height: 320px;
-    background-color: rgba(42, 41, 43, 0.8);
+    backdrop-filter: blur(6px);
     box-shadow: 0px 0px 3px rgb(42, 41, 43);
+    background-color: rgba(42, 41, 43, 0.4);
+    border: #1b1b1b solid 1px;
     border-radius: 4px;
     left: 950px;
     grid-row: 1 / 2;
@@ -269,6 +266,47 @@ body {
     font-size: 28px;
     align-items: center;
     color: rgb(255, 255, 255);
+}
+
+/* 
+.finalizar_compra {
+    width: 200px;
+    height: 80px;
+    font-size:xx-large;
+    border: none;
+    border-radius: 20px;
+    color: rgb(0, 0, 0);
+    background: #f85d03;
+    font-size: 12px;
+    font-weight: bolder;
+    margin: 15px 2px;
+    cursor: pointer;
+}
+.finalizar_compra:hover{
+    color: rgb(0, 0, 0);
+    background: #da5000;
+    cursor: pointer;
+} */
+.finalizar_compra {
+    width: 200px;
+    height: 35px;
+    border: none;
+    border-radius: 20px;
+    color: rgb(0, 0, 0);
+    background: #f85d03;
+    padding: 5px 20px;
+    text-align: center;
+    font-size: 12px;
+    font-weight: bold;
+    margin: 15px 2px;
+    cursor: pointer;
+}
+
+.finalizar_compra:hover {
+    color: #080808;
+    background: #da5000;
+    text-align: center;
+    cursor: pointer;
 }
 
 .preco {
