--- a/views/layouts/Login-bookgear.ejs
+++ b/views/layouts/Login-bookgear.ejs
@@ -1,19 +1,19 @@
-
-
 <body>
-    <div class="bimage">
+    <div class="container">
         <div class="box">
             <div class="texto">
                 <p class="Login">Login</p>
             </div>
-            <form action="/Login" method="post" name="form">
+            <form class="info" action="/Login" method="post" name="form">
                 <input type="text" name="name" id="name" class="btn-username" placeholder="Nome de usuário" required>
 
                 <input type="password" id="senha" name="senha" class="btn-username" placeholder="Senha" required> <br>
                 <span id="message" style="color:red"></span>
                 <div class="mini-box">
-                    <input type="submit" placeholder="Entrar">
-                    <a href="/cadastro">Cadastrar</a>
+                    <input class="log-botao" type="submit" placeholder="Entrar">
+                    <a class="log-botao" href="/cadastro">
+                        <p>Cadastrar</p>
+                    </a>
                 </div>
             </form>
             <p class="forgot-password"><a href="#">Esqueceu a senha?</a></p>
@@ -22,4 +22,3 @@
     </div>
 
 </body>
-
