--- a/views/layouts/carrinho.ejs
+++ b/views/layouts/carrinho.ejs
@@ -1,6 +1,6 @@
 <body>
-    <div class="container principal">
-        <div class="container grid">
+    <div class="container_main principal">
+        <div class="container_main grid">
 
             <div class="item">
                 <img class="imgbox" src="../images/box.jpg">
@@ -191,7 +191,7 @@
         </div>
 
         <!-- valor da compra de todos os produtos -->
-        <div class="container flex">
+        <div class="container_main flex">
             <div class="compra">
                 <div class="compra_div">
                     <div class="subtotal">Subtotal</div>
