--- a/views/partials/cabecalho.ejs
+++ b/views/partials/cabecalho.ejs
@@ -26,12 +26,12 @@
     <div class="cabecalho">
         <nav>
             <ul>
-                <li><a class="home" href="/">HOME</a></li>
-                <li><a class="caixas" href="#">CAIXAS</a></li>
-                <li><a class="autores" href="/autores">AUTORES</a></li>
-                <li><a class="editora" href="/user">EDITORA</a></li>
-                <li><a class="wishlist" href="/wishlist">WISHLIST</a></li>
-                <li><a class="carrinho" href="/carrinho">CARRINHO</a></li>
+                <li><a class="cat-home" href="/">HOME</a></li>
+                <li><a class="cat-caixas" href="#">CAIXAS</a></li>
+                <li><a class="cat-autores" href="/autores">AUTORES</a></li>
+                <li><a class="cat-editora" href="/user">EDITORA</a></li>
+                <li><a class="cat-wishlist" href="/wishlist">WISHLIST</a></li>
+                <li><a class="cat-carrinho" href="/carrinho">CARRINHO</a></li>
             </ul>
         </nav>
     </div>
