--- a/public/stylesheets/cabecalho.css
+++ b/public/stylesheets/cabecalho.css
@@ -17,8 +17,10 @@ header {
 
 
 .containermenu {
-  width: 1200px;
+  width: 9  0%;
   margin: 0 auto;
+  padding-left: 40px;
+  padding-right: 40px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -33,10 +35,15 @@ header {
   margin-left: 15px;
   height: 80px;
 }
+.user{
+    display: flex;
+    width: fit-content;
+  column-gap: 20px;
+}
 
 .user a {
   font-weight: bold;
-  margin-left: 20px;
+  width: 100%;
   justify-content: flex-end;
 
 }
@@ -89,11 +96,16 @@ nav {
 nav ul {
   display: flex;
   list-style: none;
+  flex-direction: row;
+  justify-content: space-evenly;
   margin: 0;
   padding: 0;
 }
 
 nav ul li {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
   margin: 0 4vw;
 }
 
@@ -104,6 +116,8 @@ nav ul li a {
   padding: 10px 20px;
   text-decoration: none;
   transition: 0.3s ease;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 nav ul li a:hover {
