--- a/public/stylesheets/tela_usuario.css
+++ b/public/stylesheets/tela_usuario.css
@@ -10,21 +10,24 @@ body {
 
 .principal {
     display: grid;
-    grid-template-columns: 220px 130px;
-    background-color: rgba(42, 41, 43, 0.4);
+    grid-template-columns: 420px 330px;
+    background-color: rgba(42, 41, 43, 0.2);
+    border: #1b1b1b solid 1px;
     backdrop-filter: blur(6px);
     border-radius: 5px;
     padding: 20px;
     padding-top: 20px;
-    height: 24rem;
-    width: 60%;
-    justify-content: space-between;
+    height: 30rem;
+    width: 50%;
+    max-width: 1280px;
+    min-width: 1220px;
+    justify-content: space-evenly;
     display: inline-flex;
 
 }
 
 .container {
-    margin-top: 10%;
+    margin-top: 100px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -33,41 +36,55 @@ body {
 }
 
 .insidebox {
-    background-color: #181818;
+    background-color: rgba(14, 14, 14, 0.5);
+    border: #1b1b1b solid 1px;
+    border-radius: 5px;
+    box-shadow: 0 0 14px rgb(14, 14, 14) inset;
     display: flex;
     flex-direction: column;
-    height: 100%;
-    height: fit-content;
+    justify-content: space-evenly;
     width: 300px;
     padding: 10px;
     align-items: center;
 }
 
 .categorias {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
     list-style-type: none;
+    height: 300px;
+    width: 100%;
 }
 
 .input_categoria {
-    font-size: 15px;
+    font-size: 18px;
+    font-weight: 700;
     border: none;
     padding: 5%;
     margin-top: 10px;
-    width: 205px;
-    max-width: 205px;
+    width: 100%;
     transition: 0.6s ease;
     background-color: rgb(24, 24, 24);
     color: gray;
 }
 
 .input_categoria:hover {
-    background-color: #f85d03;
+    background-color: #ff5000;
     transition: 0.3s ease;
     text-decoration: none;
     cursor: pointer;
     color: black;
 }
 
-.li-user{
+.input_categoria:focus-within {
+    background-color: #ff5000;
+    color: black;
+}
+
+
+.li-user {
     display: contents;
 }
 
@@ -82,24 +99,40 @@ body {
 .data {
     display: flex;
     flex-direction: column;
-    width: 600px;
+    width: 800px;
     height: 100%;
     justify-content: center;
     align-items: center;
 }
 
-form input {
+#info {
+    display: flex;
+    height: 335px;
+    width: 300px;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+form> input {
     color: white;
     background-color: rgba(20, 20, 20, 0.021);
-    border-bottom: 2px solid rgb(59, 59, 59);
+    border-bottom: 1px solid rgb(59, 59, 59);
     height: 30px;
     width: 260px;
-    margin-top: 15px;
+    margin-top: 20px;
     text-align: left;
 }
 
-.mini-box input {
+form> input:focus {
+    color: white;
+    border-bottom: 1px solid rgb(255, 80, 0);
+    margin: 10px;
+}
+
+.mini-box> input {
     border: none;
+    width: fit-content;
     border-radius: 3px;
     color: rgb(158, 158, 158);
     background: #363636;
@@ -110,7 +143,7 @@ form input {
     cursor: pointer;
 }
 
-.mini-box input:hover {
+.mini-box> input:hover {
 
     color: rgb(158, 158, 158);
     background: #464646;
@@ -119,8 +152,176 @@ form input {
 
 }
 
+/* pagina 2 histórico de compras */
+/* div dentro da div class="data" */
+
+.descricao p {
+    text-align: center;
+    width: 200px;
+}
+
+.desc {
+    width: 170px;
+    height: 84%;
+    background-color: rgba(14, 14, 14, 0.7);
+    border: #1b1b1b solid 1px;
+    backdrop-filter: blur(6px);
+}
+
+.compras {
+    justify-content: space-evenly;
+    align-items: center;
+    display: flex;
+    width: 100%;
+    height: 100px;
+    border-radius: 5px;
+    background-color: #181818;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.data-compra {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.data-compra p {
+    text-align: center;
+    margin: 3px;
+    color: grey;
+    font-size: 19px;
+}
+
+
+.historico {
+    display: grid;
+    grid-auto-rows: 100px;
+    grid-template-columns: 800px;
+    row-gap: 30px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    height: 800px;
+    width: 100%;
+    padding: 40px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.descricao {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 25px;
+    width: 700px;
+    color: gray;
+}
+
+.prod-comprados {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: 0.6s ease;
+    overflow: hidden;
+
+}
+
+.prod-comprados:hover {
+    height: fit-content;
+    max-height: 170px;
+    cursor: pointer;
+    background-color: rgba(14, 14, 14, 0.7);
+    border: #1b1b1b solid 1px;
+    backdrop-filter: blur(6px);
+    box-shadow: 0 0 14px rgb(14, 14, 14);
+    transform: scale(1.05);
+    overflow-y: auto;
+}
+
+.prod-comprados p {
+    text-align: center;
+    margin: 3px;
+    color: grey;
+}
+
+.valor-pago {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.val-compra {
+    display: flex;
+    font-size: 19px;
+    justify-content: center;
+    color: gray;
+    font-weight: 700;
+}
+
+/* Histórico */
+
+
+/* Status de compra */
+.status {
+    margin-top: 18px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 350px;
+    width: 100%;
+    background-color: rgba(14, 14, 14, 0.5);
+    border: #1b1b1b solid 1px;
+    box-shadow: 0 0 14px rgb(14, 14, 14) inset;
+    border-radius: 5px;
+    padding: 5px;
+    display: inline-flex;
+}
+.prog-bar{
+    width: 90%;
+    height: 15%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.info-entrega{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.nome-pedido{
+    color: grey;
+    font-size: 20px;
+    margin: 15px;
+    height: 20px;
+    width: 195px;
+    text-align: left;
+}
+.stt-pedido{
+    color: grey;
+    font-size: 20px;
+    margin: 15px;
+    height: 20px;
+    width: 195px;
+    text-align: left;
+}
+.barra-de-progresso{
+    width: 400px;
+    height: 6px;
+    background-color: limegreen;
+    border-radius: 20px;
+}
+.icon-prog-bar{
+    width: 52px;
+    height: 52px;
+}
+
 .pag1 {
     display: contents;
+
 }
 
 .pag2 {
