--- a/views/book.ejs
+++ b/views/book.ejs
@@ -71,12 +71,12 @@
         <div class="cabecalho">
             <nav>
                 <ul>
-                    <li><a class="home" href="/">HOME</a></li>
-                    <li><a class="caixas" href="#">CAIXAS</a></li>
-                    <li><a class="autores" href="/user">AUTORES</a></li>
-                    <li><a class="editora" href="#">EDITOR</a></li>
-                    <li><a class="wishlist" href="/wishlist">WISHLIST</a></li>
-                    <li><a class="carrinho" href="/carrinho">CARRINHO</a></li>
+                    <li><a class="cat-home" href="/">HOME</a></li>
+                    <li><a class="cat-caixas" href="#">CAIXAS</a></li>
+                    <li><a class="cat-autores" href="/user">AUTORES</a></li>
+                    <li><a class="cat-editora" href="#">EDITOR</a></li>
+                    <li><a class="cat-wishlist" href="/wishlist">WISHLIST</a></li>
+                    <li><a class="cat-carrinho" href="/carrinho">CARRINHO</a></li>
                 </ul>
             </nav>
         </div>
