--- a/views/layouts/tela_usuario.ejs
+++ b/views/layouts/tela_usuario.ejs
@@ -1,7 +1,3 @@
-<head>
-    <link rel="stylesheet" type="text/css" href="../stylesheets/tela_usuario.css">
-</head>
-
 <body>
     <div class="container">
         <div class="principal">
@@ -15,11 +11,15 @@
                     </li>
                     <li class="li-user"><button onclick="pagsw(3)" class="input_categoria">Status de entrega</button>
                     </li>
+                    <li class="li-user"><button onclick="disconnect();" class="input_categoria">Desconectar</button>
+                    </li>
                 </ul>
             </div>
             <div class="Dados-pessoais1">
-
                 <div class="data">
+
+                    <!-- _______________________________________________________________________________________________________________________ -->
+
                     <!-- Pagina 1, Dados pessoais-->
                     <div class="pag1">
                         <h1 class="title" style="color: rgb(255, 80, 0); margin-left: 5px;">Dados pessoais</h1>
@@ -34,18 +34,25 @@
                             </div>
                         </form>
                     </div>
+                    <!-- Pagina 1, Dados pessoais-->
+
+                    <!-- _______________________________________________________________________________________________________________________ -->
 
                     <!-- Pagina 2, Historico de compras] -->
                     <div class="pag2">
                         <h1 class="title" style="color: rgb(255, 80, 0); margin-left: 5px;">Historico de compras</h1>
 
-
+                        <!-- Botões laterais -->
                         <div class="descricao">
                             <p>Data da compra</p>
                             <p>Produtos</p>
                             <p>Valor pago</p>
                         </div>
+                        <!-- Botões laterais -->
+
+
                         <div class="historico">
+
 
                             <div class="compras">
                                 <div class="desc data-compra">
@@ -57,6 +64,8 @@
                                     <p id="produto2">Caixa da bookgear</p>
                                     <p id="produto3">Caixa da bookgear</p>
                                     <p id="produto4">Caixa da bookgear</p>
+                                    <p id="produto5">Caixa da bookgear</p>
+                                    <p id="produto5">Caixa da bookgear</p>
                                     <p id="produto5">Caixa da bookgear</p>
                                     <p id="produto6">Caixa da bookgear</p>
                                     <p id="produto7">Caixa da bookgear</p>
@@ -72,6 +81,35 @@
                                 </div>
                             </div>
 
+
+                            <div class="compras">
+                                <div class="desc data-compra">
+                                    <p id="Datacompra">xx/xx/xxxx</p>
+                                </div>
+                                <!-- produtos comprados -->
+                                <div class="desc prod-comprados ">
+                                    <p id="produto1">Caixa da bookgear</p>
+                                    <p id="produto2">Caixa da bookgear</p>
+                                    <p id="produto3">Caixa da bookgear</p>
+                                    <p id="produto4">Caixa da bookgear</p>
+                                    <p id="produto5">Caixa da bookgear</p>
+                                    <p id="produto5">Caixa da bookgear</p>
+                                    <p id="produto5">Caixa da bookgear</p>
+                                    <p id="produto6">Caixa da bookgear</p>
+                                    <p id="produto7">Caixa da bookgear</p>
+                                    </script>
+
+                                </div>
+                                <div class="desc valor-pago">
+                                    <div class="val-compra">
+                                        <p>R$
+                                        <p id="preco">90,50</p>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+
                             <div class="compras">
                                 <div class="desc data-compra">
                                     <p id="Datacompra">xx/xx/xxxx</p>
@@ -94,15 +132,97 @@
                                 </div>
                             </div>
 
-                            <div class="compras">
 
+                            <div class="compras">
+                                <div class="desc data-compra">
+                                    <p id="Datacompra">xx/xx/xxxx</p>
+                                </div>
+                                <!-- produtos comprados -->
+                                <div class="desc prod-comprados ">
+                                    <p id="produto1">Caixa da bookgear</p>
+                                    <p id="produto2">Caixa da bookgear</p>
+                                    <p id="produto6">Caixa da bookgear</p>
+                                    <p id="produto7">Caixa da bookgear</p>
+                                    </script>
+
+                                </div>
+                                <div class="desc valor-pago">
+                                    <div class="val-compra">
+                                        <p>R$
+                                        <p id="preco">90,50</p>
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
+
+
+                            <div class="compras">
+                                <div class="desc data-compra">
+                                    <p id="Datacompra">xx/xx/xxxx</p>
+                                </div>
+                                <!-- produtos comprados -->
+                                <div class="desc prod-comprados ">
+                                    <p id="produto1">Caixa da bookgear</p>
+                                    <p id="produto2">Caixa da bookgear</p>
+                                    <p id="produto6">Caixa da bookgear</p>
+                                    <p id="produto7">Caixa da bookgear</p>
+                                    </script>
+                                </div>
+                                <div class="desc valor-pago">
+                                    <div class="val-compra">
+                                        <p>R$
+                                        <p id="preco">90,50</p>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
 
                         </div>
                     </div>
-                    <div class="pag3">
+                    <!-- Pagina 2, Historico de compras] -->
+                    <!-- _______________________________________________________________________________________________________________________ -->
 
+                    <!-- Pagina 3, Status de entrega] -->
+
+
+                    <div class="pag3">
+                        <h1 class="title" style="color: rgb(255, 80, 0); margin-left: 5px;">Status de entrega</h1>
+
+                        <div class="status">
+                            <div class="info-entrega">
+                                <p class="nome-pedido">Nome do pedido:</p>
+                                <p class="nome-pedido">Star wars o imperio contra ataca.</p>
+                            </div>
+                            <div class="prog-bar pedido-realizado">
+                                <p class="stt-pedido">Pagamento realizado.</p>
+                                <div class="barra-de-progresso"></div>
+                                <img class="icon-prog-bar" src="../images/confere-removebg-preview.png">
+                            </div>
+
+
+                            <div class="prog-bar pagamento-realizado">
+                                <p class="stt-pedido">Pedido realizado.</p>
+                                <div class="barra-de-progresso"></div>
+                                <img class="icon-prog-bar" src="../images/confere-removebg-preview.png">
+                            </div>
+
+
+                            <div class="prog-bar enviando-produto">
+                                <p class="stt-pedido">Enviando produto.</p>
+                                <div class="barra-de-progresso"></div>
+                                <img class="icon-prog-bar" src="../images/confere-removebg-preview.png">
+                            </div>
+
+
+                            <div class="prog-bar produto-entregue">
+                                <p class="stt-pedido">Produto entregue.</p>
+                                <div class="barra-de-progresso"></div>
+                                <img class="icon-prog-bar" src="../images/confere-removebg-preview.png">
+                            </div>
+                        </div>
                     </div>
+
                 </div>
             </div>
         </div>
