--- a/views/layouts/wishlist.ejs
+++ b/views/layouts/wishlist.ejs
@@ -1,8 +1,6 @@
-
-
 <body>
-    <div class="container principal">
-        <div class="container grid">
+    <div class="container_main principal">
+        <div class="container_main grid">
             <div class="item">
                 <img class="imgbox" src="../images/box.jpg">
                 <!-- nome/descrição do produto -->
@@ -20,7 +18,6 @@
                 </div>
             </div>
         </div>
-
-        <script type="text/javascript">
-                   
-        </script>
+</body>
+<script type="text/javascript">
+</script>
