--- a/views/partials/rodape.ejs
+++ b/views/partials/rodape.ejs
@@ -1,6 +1,4 @@
 <!-- Site footer -->
-
-<head></head>
 <footer class="site-footer">
   <div class="container">
     <div class="row">
@@ -10,33 +8,33 @@
           para atender às suas necessidades literárias. Com um simples clique, você pode navegar por uma ampla variedade
           de gêneros, desde clássicos atemporais até os lançamentos mais recentes.</p>
       </div>
+      <div class="middle">
+        <div class="col-xs-6-col-md-3">
+          <h6>Categories</h6>
+          <ul class="footer-links">
+            <li><a href="">ação</a></li>
+            <li><a href="">aventura</a></li>
+            <li><a href="">Romance</a></li>
+            <li><a href="">terror</a></li>
+            <li><a href="">comedia</a></li>
+            <li><a href="">infantil</a></li>
+          </ul>
+        </div>
+        <br>
 
-      <div class="col-xs-6-col-md-3">
-        <h6>Categories</h6>
-        <ul class="footer-links">
-          <li><a href="http://scanfcode.com/category/c-language/">ação</a></li>
-          <li><a href="http://scanfcode.com/category/front-end-development/">aventura</a></li>
-          <li><a href="http://scanfcode.com/category/back-end-development/">Romance</a></li>
-          <li><a href="http://scanfcode.com/category/java-programming-language/">terror</a></li>
-          <li><a href="http://scanfcode.com/category/android/">comedia</a></li>
-          <li><a href="http://scanfcode.com/category/templates/">infantil</a></li>
-        </ul>
-      </div>
-      <br>
-
-      <div class="col-xs-6-col-md-4">
-        <h6>Quick Links</h6>
-        <ul class="footer-links">
-          <li><a href="http://scanfcode.com/about/">About Us</a></li>
-          <li><a href="http://scanfcode.com/contact/">Contact Us</a></li>
-          <li><a href="http://scanfcode.com/contribute-at-scanfcode/">Contribute</a></li>
-          <li><a href="http://scanfcode.com/privacy-policy/">Privacy Policy</a></li>
-          <li><a href="http://scanfcode.com/sitemap/">Sitemap</a></li>
-        </ul>
+        <div class="col-xs-6-col-md-4">
+          <h6>Quick Links</h6>
+          <ul class="footer-links">
+            <li><a href="">About Us</a></li>
+            <li><a href="">Contact Us</a></li>
+            <li><a href="">Contribute</a></li>
+            <li><a href="">Privacy Policy</a></li>
+            <li><a href="">Sitemap</a></li>
+          </ul>
+        </div>
       </div>
     </div>
-
-    <hr style="width:100%;text-align:left;margin-left:0">
+    <hr style="width:100%; text-align:left; margin-left:0">
   </div>
   <div class="container">
     <div class="row">
