--- a/public/stylesheets/autores.css
+++ b/public/stylesheets/autores.css
@@ -1,7 +1,14 @@
-p{
+p {
     color: rgb(179, 179, 179);
     font-family: 'Verdana', Courier, monospace;
 }
+
+main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 body {
     background-color: rgb(20, 20, 20);
     background-image: url(../images/background.jpg);
@@ -9,7 +16,8 @@ body {
     background-attachment: fixed;
     background-size: cover;
 }
-.cat-autores{
+
+.cat-autores {
     color: rgb(19, 19, 19);
     background-color: #ff5000;
 }
@@ -20,7 +28,17 @@ img {
 }
 
 a {
-  color: inherit;
+    color: inherit;
+}
+
+.autor-desc>p {
+    font-size: 15px;
+    text-align: justify;
+}
+
+.flex {
+    display: flex;
+    width: 100%;
 }
 
 button {
@@ -38,47 +56,57 @@ body {
     background-size: cover;
 }
 
-.responsive-container {
-    border-radius: 5px ;
+.container-main-autores {
+    align-items: center;
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    flex-direction: column;
     background-color: rgba(42, 41, 43, 0.4);
     border: #1b1b1b solid 1px;
     backdrop-filter: blur(6px);
+    border-radius: 5px;
+    width: 95%;
+    height: 1fr;
+    max-width: 1380px;
     padding: 30px;
-    max-width: 1280px;
-    height: fit-content;
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto; 
-       
 }
-.autores-cab{
-    color: rgb(19, 19, 19);
-    background-color: #f85d03;
+
+.responsive-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    overflow-y: scroll;
+    max-width: 1380px;
+    height: 100%;
+    max-height: 780px;
+    min-height: fit-content;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
 .autor-img {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     border-radius: 110px;
-    width: 150px;
-    height: 150px;
-    padding: 25px;
-
+    width: 100%;
+    height: 100%;
 }
 
 .img-autores {
+
     border-radius: 100%;
-    height: 100%;
-    width: 100%;
+    height: 80%;
+    width: 80%;
 
 }
 
 .main-grid {
-    width: 775px;
-    display: flex;
-    flex-direction: column;
+    row-gap: 4rem;
+    width: fit-content;
+    display: grid;
+    grid-auto-rows: 200px;
     justify-content: space-between;
 }
 
@@ -120,22 +148,41 @@ main {
 
 .autores {
     display: grid;
-    gap: 2rem;
+    gap: 4rem;
     grid-auto-rows: 200px;
     width: 400px;
     height: 664px;
 }
-.autor{
+
+.autor {
+    background-color: rgba(14, 14, 14, 0.5);
+    border: #1b1b1b solid 1px;
+    border-radius: 5px;
+    box-shadow: 0 0 14px rgb(14, 14, 14) inset;
     display: grid;
-    grid-template-rows: 350px 50;
-    grid-template-columns: 200px 200px;
+    justify-content: left;
+    padding-left: 10px;
+    align-items: center;
+    grid-template-rows: 150px 50px;
+    grid-template-columns: 150px 250px;
     height: 200px;
-    width: 400px;
-    background-color: aqua;
+    width: 1220px;
 }
-.autor-desc{
-    height: 200px;
-    width: 200px;
+
+.nome-autor {
+    text-align: center;
+    word-wrap: break-word;
+    height: 100%;
+}
+
+.autor-desc {
+    display: flex;
+    padding: 15px;
+    word-wrap: break-word;
+    max-height: 170px;
+    overflow: hidden 2px;
+    grid-column: 2/3;
+    grid-row: 1/3;
 }
 
 .product {
@@ -245,7 +292,35 @@ main {
 
 }
 
-.credits > a {
+.titulo-nome-autor {
+    margin-right: 220px;
+}
+
+.titulo-produtos-autor {
+    margin-left: 210px;
+}
+
+.titulo {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    height: 30px;
+    font-size: 25px;
+    padding: 10px;
+    color: grey;
+}
+
+.botao-mais:hover {
+    border: none;
+    border: 2px #ff5000 solid;
+    color: #080808;
+    background: #ff5000;
+    cursor: pointer;
+
+}
+
+.credits>a {
     display: block;
 }
 
