--- a/public/stylesheets/cabecalho.css
+++ b/public/stylesheets/cabecalho.css
@@ -5,9 +5,8 @@
 }
 
 header {
-  background-color: rgba(42, 41, 43, 0.4);
+  background-color: rgba(42, 41, 43, 0.3);
   backdrop-filter: blur(6px);
-  box-shadow: 0px 0px 10px rgb(42, 41, 43);
   height: 70px;
   top: 0;
   left: 0;
@@ -17,7 +16,7 @@ header {
 
 
 .containermenu {
-  width: 9  0%;
+  width: 1fr;
   margin: 0 auto;
   padding-left: 40px;
   padding-right: 40px;
@@ -51,7 +50,7 @@ header {
 .botao {
   font-weight: bold;
   border: none;
-  border-radius: 18px;
+  border-radius: 20px;
   color: rgb(158, 158, 158);
   background: #363636;
   padding: 9px 27px;
@@ -61,22 +60,13 @@ header {
   transition-duration: 0.2s;
   font-size: 16px;
   margin: 4px 2px;
-  cursor: pointer;
-
 }
 
 .botao:hover {
   border: none;
-  border-radius: 18px;
   color: #080808;
-  background: #f85d03;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
+  background: #ff5000;
   cursor: pointer;
-
 }
 
 .cab {
@@ -121,6 +111,6 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  color: rgb(19, 19, 19);
-  background-color: #f85d03;
+  background: #ff5000;
+  color: black;
 }
