--- a/public/stylesheets/pagina-produto.css
+++ b/public/stylesheets/pagina-produto.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,700;1,800&display=swap');
-.cart{
+
+.cart {
     font-family: 'Verdana', Courier, monospace;
     color: grey;
 }
+
 a {
     color: grey;
-    text-decoration:none ;
+    text-decoration: none;
     font-style: none;
 }
 
@@ -16,10 +18,10 @@ body {
     background-attachment: fixed;
     background-size: cover;
 }
-.tabs-content{
 
-}
-select option{
+.tabs-content {}
+
+select option {
     background-color: rgb(39, 39, 39);
 }
 
@@ -30,9 +32,6 @@ body {
     background-attachment: fixed;
     background-size: cover;
 }
-
-
-
 
 
 .imagem-principal {
@@ -51,12 +50,12 @@ body {
     font-family: 'Verdana', Courier, monospace;
     border: #1b1b1b solid 1px;
     border-radius: 5px;
-    background-color: rgba(42, 41, 43, 0.6);
+    background-color: rgba(42, 41, 43, 0.3);
     color: grey;
     backdrop-filter: blur(6px);
     padding: 20px;
     border-radius: 5px;
-    margin:20px;
+    margin: 20px;
     margin-top: 100px;
     min-height: 620px;
     min-width: 1250px;
@@ -64,7 +63,6 @@ body {
 
 .row1 {
     display: flex;
-
     justify-content: space-evenly;
 }
 
@@ -226,7 +224,7 @@ body {
 }
 
 .reviews i {
-    color: #ff7300;
+    color: #ff5000;
 }
 
 .product-title {
@@ -238,6 +236,14 @@ body {
 
 .product-inf {
     margin-top: 20px;
+}
+
+.inf-botao {
+    padding: 10px 50px;
+}
+
+.inf-botao:active {
+    color: #000;
 }
 
 .product-inf ul {
@@ -253,19 +259,21 @@ body {
 /* Botão de informações de produtos */
 .product-inf ul li {
     padding: 10px 30px;
+    border-radius: 20px;
     cursor: pointer;
 
 }
-.product-inf{
-    color: grey ;
+
+.product-inf {
+    color: grey;
 }
 
-p{
+p {
     color: grey;
 }
 
 .product-inf ul li:hover {
-    border-radius: 5px;
+    border-radius: 20px;
     background: #2e2b2b;
 }
 
@@ -278,11 +286,11 @@ p{
 
 .product-inf ul li a:hover {
     text-decoration: none;
+    color: black;
 }
 
 .product-inf ul li.active {
-    border-bottom: 3px solid #000000;
-    background: #ff7300;
+    background: #ff5000;
     transition: 0.3s;
     color: black;
 }
@@ -292,7 +300,7 @@ p{
 }
 
 .custom-btn {
-    background: #ff7300;
+    background: #ff5000;
     color: grey;
     display: block;
     width: 200px;
@@ -309,18 +317,24 @@ p{
 
 .custom-btn:hover {
     text-decoration: none;
-    background: #f85d03;
-    color:  black;
+    background: #ff5000;
+    color: black;
     opacity: 0.88;
 }
 
 .tudo {
+    background-color: rgba(14, 14, 14, 0.5);
+    border: #1b1b1b solid 1px;
+    border-radius: 5px;
+    box-shadow: 0 0 14px rgb(14, 14, 14) inset;
+    padding: 20px;
     display: flex;
     height: 250px;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .buttons {
+
     color: #000;
     padding: 10px;
     height: 200px;
@@ -330,7 +344,7 @@ p{
     justify-content: center;
 }
 
-.buttons .row .col-md-6 {
+.buttons .row .col-mid-6 {
     /* position: relative; */
     height: 60px;
     width: 210px;
@@ -338,17 +352,19 @@ p{
     align-items: center;
     justify-content: center;
 }
-.col-mde-4{
-display: flex;
-flex-direction: column;
-justify-content: space-between;
 
-}
-.col-md-6{
+.col-mde-4 {
     display: flex;
-
     flex-direction: column;
     justify-content: space-between;
+
+}
+
+.col-mid-6 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 0px;
     width: 700px;
     height: 500px;
 }
@@ -356,8 +372,7 @@ justify-content: space-between;
 .descricao {
     display: block;
     width: 300px;
-    margin-right: 150px;
-   
+
 }
 
 
@@ -380,31 +395,34 @@ justify-content: space-between;
 .custom-btn i {
     margin-left: 15px;
 }
-.size{
+
+.size {
     cursor: pointer;
-    background: rgba(66, 66, 66,0);
-    border-radius:5px ;
-    width: 60px;
-    height: 30px;
-    color: grey;  
-}
-.quantity {
-    cursor: pointer;
-    background: rgba(66, 66, 66,0);
-    border-radius:5px ;
+    background: rgba(66, 66, 66, 0);
+    border-radius: 5px;
     width: 60px;
     height: 30px;
     color: grey;
 }
-h5{
-font-size: 15px;
+
+.quantity {
+    cursor: pointer;
+    background: rgba(66, 66, 66, 0);
+    border-radius: 5px;
+    width: 60px;
+    height: 30px;
+    color: grey;
 }
 
-.size-custom-select{
+h5 {
+    font-size: 15px;
+}
+
+.size-custom-select {
     cursor: pointer;
     text-decoration: none;
     color: grey;
-    background: rgba(66, 66, 66,0);
+    background: rgba(66, 66, 66, 0);
 
 }
 
