--- a/views/layouts/Tela-principal_BookGear.ejs
+++ b/views/layouts/Tela-principal_BookGear.ejs
@@ -432,7 +432,92 @@
                     <button class="product-action"><i class="material-icons-outlined">like</i></button>
                 </div>
             </a>
+
+            <a class="produto" href="/produto">
+                <div class="product-image">
+                    <img class="imagem-produto" src="../images/box.jpg" />
+                </div>
+                <div class="baixo">
+                    <div class="product-content">
+                        <div class="product-info">
+                            <h2 class="product-title">Star wars oo imperio contra adipisicing elit. Nulla, rem
+                                deserunt
+                                quae accusantium iure, voluptas delectus voluptatum ipsam alias harum sint quaerat
+                                autem
+                                illum perferendis iusto magnam.</h2>
+                            <p class="product-price">$ 10</p>
+                        </div>
+
+                    </div>
+                    <button class="product-action"><i class="material-icons-outlined">like</i></button>
+                </div>
+            </a>
+
+            <a class="produto" href="/produto">
+                <div class="product-image">
+                    <img class="imagem-produto" src="../images/box.jpg" />
+                </div>
+                <div class="baixo">
+                    <div class="product-content">
+                        <div class="product-info">
+                            <h2 class="product-title">Star wars oo imperio contra adipisicing elit. Nulla, rem
+                                deserunt
+                                quae accusantium iure, voluptas delectus voluptatum ipsam alias harum sint quaerat
+                                autem
+                                illum perferendis iusto magnam.</h2>
+                            <p class="product-price">$ 10</p>
+                        </div>
+
+                    </div>
+                    <button class="product-action"><i class="material-icons-outlined">like</i></button>
+                </div>
+            </a>
+
+            <a class="produto" href="/produto">
+                <div class="product-image">
+                    <img class="imagem-produto" src="../images/box.jpg" />
+                </div>
+                <div class="baixo">
+                    <div class="product-content">
+                        <div class="product-info">
+                            <h2 class="product-title">Star wars oo imperio contra adipisicing elit. Nulla, rem
+                                deserunt
+                                quae accusantium iure, voluptas delectus voluptatum ipsam alias harum sint quaerat
+                                autem
+                                illum perferendis iusto magnam.</h2>
+                            <p class="product-price">$ 10</p>
+                        </div>
+
+                    </div>
+                    <button class="product-action"><i class="material-icons-outlined">like</i></button>
+                </div>
+            </a>
+
+            <a class="produto" href="/produto">
+                <div class="product-image">
+                    <img class="imagem-produto" src="../images/box.jpg" />
+                </div>
+                <div class="baixo">
+                    <div class="product-content">
+                        <div class="product-info">
+                            <h2 class="product-title">Star wars oo imperio contra adipisicing elit. Nulla, rem
+                                deserunt
+                                quae accusantium iure, voluptas delectus voluptatum ipsam alias harum sint quaerat
+                                autem
+                                illum perferendis iusto magnam.</h2>
+                            <p class="product-price">$ 10</p>
+                        </div>
+
+                    </div>
+                    <button class="product-action"><i class="material-icons-outlined">like</i></button>
+                </div>
+            </a>
         </div>
+
+        <div class="ver-mais">
+            <button class="botao-mais">ver mais</button>
+        </div>
+
     </div>
 
 </body>
