--- a/views/layouts/pagina-produto.ejs
+++ b/views/layouts/pagina-produto.ejs
@@ -1,10 +1,9 @@
-
-
 <head>
   <link rel="stylesheet" type="text/css" href="../stylesheets/pagina-produto.css" />
 </head>
 
 <body>
+
   <body>
     <div class="cart">
       <div class="row row1">
@@ -19,12 +18,12 @@
             <img src="https://m.media-amazon.com/images/I/91CqzuD1c7L.jpg" width="500" height="150" class="small-img">
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-mid-6">
           <h1 class="product-title">Star Wars: Luz dos Jedi (The High Republic)</h1>
           <!-- comentario foda -->
           <div class="tudo">
             <div class="descricao">
-              <div class="reviews">         
+              <div class="reviews">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -64,11 +63,14 @@
 
             <div class="buttons">
               <div class="row">
-                <div class="col-md-6"><a href="#" class="custom-btn">Adicionar ao carrinho<i class="fas fa-angle-right"></i></a>
+                <div class="col-mid-6"><a href="/carrinho" class="custom-btn">Adicionar ao carrinho<i
+                      class="fas fa-angle-right"></i></a>
                 </div>
-                <div class="col-md-6"><a href="#" class="custom-btn">Wishlist<i class="fas fa-angle-right"></i></a>
+                <div class="col-mid-6"><a href="/wishlist" class="custom-btn">Wishlist<i
+                      class="fas fa-angle-right"></i></a>
                 </div>
-                <div class="col-md-6"><a href="#" class="custom-btn">Adicionar a caixa<i class="fas fa-angle-right"></i></a>
+                <div class="col-mid-6"><a href="#" class="custom-btn">Adicionar a caixa<i
+                      class="fas fa-angle-right"></i></a>
                 </div>
               </div>
             </div>
@@ -76,8 +78,8 @@
 
           <div id="product" class="product-inf">
             <ul>
-              <li class="active"><a class="product-inf" href="#Description">Descrição do produto</a></li>
-              <li><a class="product-inf" href="#Details">Detalhes do produto</a></li>
+              <li class="active"><a class="product-inf inf-botao" href="#Description">Descrição do produto</a></li>
+              <li><a class="product-inf inf-botao" href="#Details">Detalhes do produto</a></li>
             </ul>
             <div class="tabs-content">
               <div id="Description">
