Atualização tela principal

--- a/views/layouts/Tela-principal_BookGear.ejs
+++ b/views/layouts/Tela-principal_BookGear.ejs
@@ -4,7 +4,7 @@
             <img class="banner1 banner" src="../images/banner1.png" alt="banner">
             <img class="banner2 banner" src="../images/banner1.png" alt="banner">
         </div>
-
+<div class="itens-meio">
     <div class="container-principal">
         <div class="categorias">
             <h1>Categorias</h1>
@@ -519,7 +519,7 @@
         </div>
 
     </div>
-
+</div>
 </body>
 
 </html>
