--- a/public/stylesheets/Tela-principal.css
+++ b/public/stylesheets/Tela-principal.css
@@ -7,14 +7,19 @@ body {
     background-attachment: fixed;
     background-size: cover;
 }
+.itens-meio{
+    display: flex;
+    justify-content: center;
+}
 
 .grid-principal {
     display: grid;
     height: fit-content;
     width: 100%;
+    max-width: 1100px;
     row-gap: 50px;
     justify-content: space-between;
-    grid-template-columns: 190px 190px 190px 190px 190px;
+    grid-template-columns: repeat(auto-fill, 170px);
     grid-auto-rows: 220px;
 }
 
@@ -40,27 +45,26 @@ body {
     display: grid;
     grid-template-columns: 236px 75%;
     justify-content: center;
-    column-gap: 5%;
+    column-gap: 3%;
     border: #1b1b1b solid 1px;
     border-radius: 5px;
     background-color: rgba(42, 41, 43, 0.2);
     backdrop-filter: blur(6px);
     padding: 20px;
     padding-top: 30px;
-    padding-bottom: 180px;
+    padding-bottom: 50px;
     height: fit-content;
     min-width: 1300px;
-    width: 1fr;
+    max-width: fit-content;
     row-gap: 50px;
-
 }
 
 .banners_meio {
     display: flex;
     margin-top: 60px;
     margin-bottom: 25px;
-    justify-content: space-evenly;
-    gap: 60px;
+    justify-content: center;
+    gap: 100px;
     height: 300px;
 
 }
@@ -261,6 +265,7 @@ body {
     grid-column: 2/3;
     grid-row: 2/3;
     display: flex;
+    max-width: 1100px;
     justify-content: space-evenly;
     align-items: center;
     height: 50px;
