--- a/public/stylesheets/wishlist.css
+++ b/public/stylesheets/wishlist.css
@@ -7,7 +7,8 @@ body {
 }
 
 .container_main {
-    display: grid;
+    display: flex;
+    flex-direction: column;
 }
 .cat-wishlist{
     color: rgb(19, 19, 19);
@@ -29,6 +30,7 @@ body {
     padding: 20px;
     padding-top: 30px;
     height: fit-content;
+    align-items: center;
     width: 97%;
     justify-content: center;
 
@@ -43,7 +45,7 @@ body {
     width: 80%;
     row-gap: 24px;
     border-radius: 4px;
-    justify-content: space-between;
+    
     grid-template-columns: 100%;
     grid-auto-rows: 150px;
     padding-right: 15px;
@@ -113,15 +115,13 @@ body {
 .item {
     color: rgb(179, 179, 179);
     display: flex;
-    backdrop-filter: blur(6px);
-    box-shadow: 0px 0px 3px rgb(42, 41, 43);
+    backdrop-filter: blur(3px);
     background-color: rgba(42, 41, 43, 0.4);
     border: #1b1b1b solid 1px;
     border-radius: 4px;
     justify-content: center;
     font-family: 'Verdana', Courier, monospace;
     text-align: center;
-
     transition: 0.5s ease;
 
 }
