--- a/views/layouts/wishlist.ejs
+++ b/views/layouts/wishlist.ejs
@@ -17,7 +17,26 @@
                     <button class="adicionar" type="url">Adicionar ao carrinho</button>
                 </div>
             </div>
+            <div class="item">
+                <img class="imgbox" src="../images/box.jpg">
+                <!-- nome/descrição do produto -->
+                <p class="descricao">Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Officia ab a qui tempore eius nulla et,
+                    in ex fugiat autem. Nulla blanditiis aliquid, quae at
+                    nostrum maiores qui quia est.</p>
+
+                <div class="descricao2">
+                    <!-- preço do produto -->
+                    <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
+                    <div class="estoque">Em estoque</div>
+                    <button class="remove" type="url">Remover da wishlist</button>
+                    <button class="adicionar" type="url">Adicionar ao carrinho</button>
+                </div>
+            </div>
+
+            
         </div>
+    </div>
 </body>
 <script type="text/javascript">
 </script>
