--- a/views/partials/rodape.ejs
+++ b/views/partials/rodape.ejs
@@ -1,6 +1,6 @@
 <!-- Site footer -->
 <footer class="site-footer">
-  <div class="container">
+  <div class="footer-container">
     <div class="row">
       <div class="col-sm-12 col-md-6">
         <h6>About</h6>
@@ -36,7 +36,7 @@
     </div>
     <hr style="width:100%; text-align:left; margin-left:0">
   </div>
-  <div class="container">
+  <div class="footer-container">
     <div class="row">
       <div class="col-md-8 col-sm-6 col-xs-12">
       </div>
