--- a/views/partials/rodape.ejs
+++ b/views/partials/rodape.ejs
@@ -34,7 +34,7 @@
         </div>
       </div>
     </div>
-    <hr style="width:100%; text-align:left; margin-left:0">
+    <hr style="width:1fr; text-align:left; margin-left:0">
   </div>
   <div class="footer-container">
     <div class="row">
