--- a/views/layouts/carrinho.ejs
+++ b/views/layouts/carrinho.ejs
@@ -10,7 +10,7 @@
 
                 <div class="descricao2">
                     <!-- preço do produto -->
-                    <div class="preco">R$: <input type="text" name="total" id="total" value="90,50" /></div>
+                    <div class="preco">R$: <p id="total">90,50</p></div>
                     <div class="estoque">Em estoque</div>
 
                     <div class="Qtd_produtos">
