--- a/views/layouts/tela_usuario.ejs
+++ b/views/layouts/tela_usuario.ejs
@@ -11,7 +11,8 @@
                     </li>
                     <li class="li-user"><button onclick="pagsw(3)" class="input_categoria">Status de entrega</button>
                     </li>
-                    <li class="li-user"><button onclick="disconnect();" class="input_categoria">Desconectar</button>
+                    <li class="li-user"><a class="input_categoria" href="/logout">
+                        <button type="url" class="input_categoria">Desconectar</button></a>
                     </li>
                 </ul>
             </div>
