--- a/views/partials/cabecalho.ejs
+++ b/views/partials/cabecalho.ejs
@@ -13,33 +13,38 @@
                         d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
                 </svg></a>
         </div>
-        <% if (typeof Userlogged === 'undefined') { %>
+        <% if (typeof Userlogged==='undefined' ) { %>
             <div class="user">
                 <a href="/Login">
                     <button type="url" class="botao">Entrar</button></a>
                 <a class="login" href="/cadastro">
                     <button type="url" class="botao">Cadastrar</button></a>
             </div>
-    <% } else if(Userlogged === 'sim') { %>
-            <% if (typeof username !== 'undefined') { %>
-        <div class="user">
-            <a href="/user">
-                <button type="url" class="botao"><%- username %></button>
-            </a>
-            <a class="login" href="/">
-                <button type="url" class="botao">Desconectar</button></a>
+
         </div>
-        <% }}; %>
-        <div class="cabecalho">
-            <nav>
-                <ul>
-                    <li><a class="cat-home" href="/">HOME</a></li>
-                    <li><a class="cat-caixas" href="/caixa">CAIXAS</a></li>
-                    <li><a class="cat-autores" href="/autores">AUTORES</a></li>
-                    <li><a class="cat-editora" href="/user">EDITORA</a></li>
-                    <li><a class="cat-wishlist" href="/wishlist">WISHLIST</a></li>
-                    <li><a class="cat-carrinho" href="/carrinho">CARRINHO</a></li>
-                </ul>
-            </nav>
-        </div>
+
+            <% } else if(Userlogged==='sim' ) { %>
+                <% if (typeof username !=='undefined' ) { %>
+                    <div class="user">
+                        <a href="/user">
+                            <button type="url" class="botao"><%- username %></button>
+                        </a>
+                        <a class="login" href="/logout">
+                            <button type="url" class="botao">Desconectar</button></a>
+                    </div>
+                </div>
+                    <% }}; %>
+
+    <div class="cabecalho">
+        <nav>
+            <ul>
+                <li><a class="cat-home" href="/">HOME</a></li>
+                <li><a class="cat-caixas" href="/caixa">CAIXAS</a></li>
+                <li><a class="cat-autores" href="/autores">AUTORES</a></li>
+                <li><a class="cat-editora" href="/user">EDITORA</a></li>
+                <li><a class="cat-wishlist" href="/wishlist">WISHLIST</a></li>
+                <li><a class="cat-carrinho" href="/carrinho">CARRINHO</a></li>
+            </ul>
+        </nav>
+    </div>
 </header>
