--- a/edit/Pedido.ejs
+++ b/edit/Pedido.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../stylesheets/caixa.css" />
+    <link rel="stylesheet" href="../stylesheets/scrollbar.css">
     <link rel="shortcut icon" href="images/smart_ico.ico" />
 
     <meta charset="UTF-8">
