--- a/views/layouts/tela_usuario.ejs
+++ b/views/layouts/tela_usuario.ejs
@@ -12,7 +12,7 @@
                     <li class="li-user"><button onclick="pagsw(3)" class="input_categoria">Status de entrega</button>
                     </li>
                     <li class="li-user"><a class="input_categoria" href="/logout">
-                        <button type="url" class="input_categoria">Desconectar</button></a>
+                            <button type="url" class="input_categoria">Desconectar</button></a>
                     </li>
                 </ul>
             </div>
@@ -220,6 +220,10 @@
                                 <p class="stt-pedido">Produto entregue.</p>
                                 <div class="barra-de-progresso"></div>
                                 <img class="icon-prog-bar" src="../images/confere-removebg-preview.png">
+                            </div>
+                            <div class="botoes-entrega">
+                                <button class="botao">Suporte tecnico</button>
+                                <button class="botao">Cancelar pedido</button>
                             </div>
                         </div>
                     </div>
